--- a/code_practice/WeixinDemo/demo1/app.wxss
+++ b/code_practice/WeixinDemo/demo1/app.wxss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: flex-start;
   /* padding: 200rpx 0; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* background-color: rgb(170, 255, 234); */
 } 
 
